[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = { version = "0.39.0" }
dotenv = "0.15.0"
fast-socks5 = "0.8.0"
futures-util = "0.3.23"
hyper = { version = "0.14.20", features = ["server", "http1", "http2"] }
hyper-socks2 = { version = "0.6.0", default_features = false }
hyper-tungstenite = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
postgrest = "1.3.1"
prometheus = "0.13.1"
reqwest = { version = "0.11.11", default_features = false, features = ["hyper-rustls", "json"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.23.4"
tokio-tungstenite = "0.17.2"
tracing-subscriber = "0.3.15"
url = "2.3.0"

[build-dependencies]
minify-html = "0.9.2"
